# ucc1-scraper

./: .gitignore  Makefile  PRD.md  install.sh  pyproject.toml  requirements.txt
dashboard/: _headers  index.html  wrangler.toml
data/: directory_cache.db-shm  directory_cache.db-wal  top_leads_for_enrichment.txt  ucc_scraper.db-journal
docs/: MULTI_STATE_PRD.md  PRD-v2.md  prd-gtm-deployment.md  prd-portal-landscape.md  prd-scoring-engine.md
scripts/: enrich-cf-worker.sh  enrich-directories.py  enrich-gmaps.py  enrich-leads.py  import-phones.py  mass-enrich-gmaps.py  refresh-dashboard.py  vps-daily.sh
src/: cli.py  ingestor.py  storage.py
src/funders/: funder_db.json
src/models/: __init__.py  filing.py  lead.py
src/pipeline/: __init__.py  classifier.py  dedupe.py  directory_scraper.py  enricher.py  florida_ocr.py  free_enricher.py  gmaps_enricher.py  normalizer.py  re_finder.py  real_estate_scorer.py  scorer.py
src/scrapers/: __init__.py  base.py  california.py  colorado.py  delaware.py  florida.py  georgia.py  illinois.py  maryland.py  new_jersey.py  new_york.py  oregon.py  registry.py  texas.py
tests/: conftest.py  test_classifier.py  test_dedupe.py  test_enricher.py  test_gmaps_enricher.py  test_models.py  test_new_york.py  test_normalizer.py  test_scorer.py  test_storage.py
workers/: enrich-worker.js  wrangler.toml
