[project]
name = "ucc1-scraper"
version = "0.1.0"
description = "Multi-state UCC-1 filing scraper for MCA lead generation"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "playwright>=1.48.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
    "thefuzz>=0.22.0",
    "lxml>=5.3.0",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
ucc-scrape = "cli:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
